Fix blog title on mobile

--- a/source/css/_partial/_mobile.scss
+++ b/source/css/_partial/_mobile.scss
@@ -24,9 +24,16 @@
     margin-right: 50px;
 
     .logo {
+      width: 28px;
+      height: 28px;
+      margin-right: 6px;
+    }
+
+    .logo-text {
+      font-family: $global-serif-font-family;
       font-size: 22px;
       line-height: $mobile-navbar-height;
-      font-family: $logo-font-family;
+      vertical-align: middle;
     }
   }
 
